--- a/eshopProject/eshop.Web/Views/Home/Index.cshtml
+++ b/eshopProject/eshop.Web/Views/Home/Index.cshtml
@@ -2,6 +2,7 @@
     ViewBag.Title = "Home Page";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
+<link rel="stylesheet" href="~/Content/css/font-awesome.min.css">
 <div id="navigation">
     <!-- container -->
     <div class="container">
@@ -9,7 +10,7 @@
             <!-- category nav -->
             <div class="category-nav">
                 <span class="category-header">Categories <i class="fa fa-list"></i></span>
-                
+
                 @{Html.RenderAction("_CategoryListPartial", "Home");}
 
             </div>
