--- a/eshopProject/eshop.Web/Views/Shared/_Layout.cshtml
+++ b/eshopProject/eshop.Web/Views/Shared/_Layout.cshtml
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>@ViewBag.Title - My ASP.NET Application</title>
     <link href="https://fonts.googleapis.com/css?family=Hind:400,700" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"  />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
     <!-- Bootstrap -->
     <link type="text/css" rel="stylesheet" href="~/Content/css/bootstrap.min.css" />
 
@@ -20,7 +20,8 @@
     <link type="text/css" rel="stylesheet" href="~/Content/css/nouislider.min.css" />
 
     <!-- Font Awesome Icon -->
-    <link rel="stylesheet" href="~/Content/css/font-awesome.min.css">
+
+    <link href="~/fonts/font-awesome.min.css" rel="stylesheet" />
 
     <!-- Custom stlylesheet -->
     <link type="text/css" rel="stylesheet" href="~/Content/css/style.css" />
