--- a/eshopProject/eshop.Web/Views/Shared/_Layout.cshtml
+++ b/eshopProject/eshop.Web/Views/Shared/_Layout.cshtml
@@ -1,4 +1,4 @@
-﻿@{ 
+﻿@{
     Layout = null;
 }
 <!DOCTYPE html>
@@ -84,62 +84,33 @@
                                 <div class="header-btns-icon">
                                     <i class="fa fa-user-o"></i>
                                 </div>
-                                <strong class="text-uppercase">My Account <i class="fa fa-caret-down"></i></strong>
+                                <strong class="text-uppercase">Hesabım <i class="fa fa-caret-down"></i></strong>
                             </div>
-                            <a href="#" class="text-uppercase">Login</a> / <a href="#" class="text-uppercase">Join</a>
-                            <ul class="custom-menu">
-                                <li><a href="#"><i class="fa fa-user-o"></i> My Account</a></li>
-                                <li><a href="#"><i class="fa fa-heart-o"></i> My Wishlist</a></li>
-                                <li><a href="#"><i class="fa fa-exchange"></i> Compare</a></li>
-                                <li><a href="#"><i class="fa fa-check"></i> Checkout</a></li>
-                                <li><a href="#"><i class="fa fa-unlock-alt"></i> Login</a></li>
-                                <li><a href="#"><i class="fa fa-user-plus"></i> Create An Account</a></li>
-                            </ul>
+                            <a href="/Customer/Login" class="text-uppercase">Giriş</a>/<a href="/Customer/Register" class="text-uppercase">Yeni</a>
+                                                                                       <ul class="custom-menu">
+                                                                                           @if (Session["loginCustomer"] != null)
+                                                                                           {
+                                                                                               <li><a href="/Customer/MyAccount"><i class="fa fa-user-o"></i>Hesabım</a></li>
+                                                                                               <li><a href="#"><i class="fa fa-heart-o"></i>Favori Listem</a></li>
+                                                                                               <li><a href="#"><i class="fa fa-exchange"></i> Karşılaştır</a></li>
+                                                                                               <li><a href="#"><i class="fa fa-check"></i> Kontrol et </a></li>
+                                                                                               <li><a href="/Customer/Logout"><i class="fa fa-unlock-alt"></i> Çıkış Yap  </a></li>
+                                                                                           }
+                                                                                           @if (Session["loginCustomer"] == null)
+                                                                                           {
+                                                                                               <li><a href="/Customer/Login"><i class="fa fa-unlock-alt"></i> Giriş Yap  </a></li>
+                                                                                               <li><a href="/Customer/Register"><i class="fa fa-user-plus"></i> Yeni Bir Hesap Oluştur</a></li>
+                                                                                           }
+
+                                                                                       </ul>
                         </li>
-                        <!-- /Account -->
-                        <!-- Cart -->
-                        <li class="header-cart dropdown default-dropdown">
-                            <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">
-                                <div class="header-btns-icon">
-                                    <i class="fa fa-shopping-cart"></i>
-                                    <span class="qty">3</span>
-                                </div>
-                                <strong class="text-uppercase">My Cart:</strong>
-                                <br>
-                                <span>35.20$</span>
-                            </a>
-                            <div class="custom-menu">
-                                <div id="shopping-cart">
-                                    <div class="shopping-cart-list">
-                                        <div class="product product-widget">
-                                            <div class="product-thumb">
-                                                <img src="~/img/thumb-product01.jpg" alt="">
-                                            </div>
-                                            <div class="product-body">
-                                                <h3 class="product-price">$32.50 <span class="qty">x3</span></h3>
-                                                <h2 class="product-name"><a href="#">Product Name Goes Here</a></h2>
-                                            </div>
-                                            <button class="cancel-btn"><i class="fa fa-trash"></i></button>
-                                        </div>
-                                        <div class="product product-widget">
-                                            <div class="product-thumb">
-                                                <img src="~/img/thumb-product01.jpg" alt="">
-                                            </div>
-                                            <div class="product-body">
-                                                <h3 class="product-price">$32.50 <span class="qty">x3</span></h3>
-                                                <h2 class="product-name"><a href="#">Product Name Goes Here</a></h2>
-                                            </div>
-                                            <button class="cancel-btn"><i class="fa fa-trash"></i></button>
-                                        </div>
-                                    </div>
-                                    <div class="shopping-cart-btns">
-                                        <button class="main-btn">View Cart</button>
-                                        <button class="primary-btn">Checkout <i class="fa fa-arrow-circle-right"></i></button>
-                                    </div>
-                                </div>
-                            </div>
-                        </li>
-                        <!-- /Cart -->
+                        @if (Session["loginCustomer"] != null)
+                        {
+
+                            Html.RenderAction("_BasketPartial", "Home");
+
+                        }
+
                         <!-- Mobile nav toggle-->
                         <li class="nav-toggle">
                             <button class="nav-toggle-btn main-btn icon-btn"><i class="fa fa-bars"></i></button>
@@ -166,7 +137,7 @@
                 </div>
                 <!-- /category nav -->
                 <!-- menu nav -->
-                    @{Html.RenderAction("_MenuNavPartial", "Home");}
+                @{Html.RenderAction("_MenuNavPartial", "Home");}
                 <!-- menu nav -->
             </div>
         </div>
