--- a/eshopProject/eshop.Web/Views/Product/Details.cshtml
+++ b/eshopProject/eshop.Web/Views/Product/Details.cshtml
@@ -55,7 +55,7 @@
                         <h3 class="product-price">$32.50 <del class="product-old-price">$45.00</del></h3>
                         <div>
                             <div class="product-rating">
-                                @for (int i = 0; i < Model.Star; i++)
+                                @*@for (int i = 0; i < Model.Star; i++)
                                 {
                                     <i class="fa fa-star"></i>
 
@@ -64,7 +64,7 @@
                                 {
 
                                     <i class="fa fa-star-o empty"></i>
-                                }
+                                }*@
 
                             </div>
                             <a href="#">3 Review(s) / Add Review</a>
@@ -145,14 +145,14 @@
                                                         <div><a href="#"><i class="fa fa-user-o"></i> @item.Customer.Name</a></div>
                                                         <div><a href="#"><i class="fa fa-clock-o"></i> @item.CreatedDate </a></div>
                                                         <div class="review-rating pull-right">
-                                                            @for (int i = 0; i < item.Product.Star; i++)
+                                                            @*@for (int i = 0; i < item.Product.Star; i++)
                                                             {
                                                                 <i class="fa fa-star"></i>
                                                             }
                                                             @for (int i = 0; i < 5 - item.Product.Star; i++)
                                                             {
                                                                 <i class="fa fa-star-o empty"></i>
-                                                            }
+                                                            }*@
 
 
 
