--- a/eshopProject/eshop.Web/Views/Product/Index.cshtml
+++ b/eshopProject/eshop.Web/Views/Product/Index.cshtml
@@ -1,22 +1,21 @@
 ﻿@model List<eshop.EntitiesLayer.Models.Product>
 @{
-                /**/
+    /**/
 
-                ViewBag.Title = "Index";
-                Layout = "~/Views/Shared/_Layout.cshtml";
+    ViewBag.Title = "Index";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 
 
 <!-- NAVIGATION -->
-
 <!-- /NAVIGATION -->
 <!-- BREADCRUMB -->
 <div id="breadcrumb">
     <div class="container">
         <ul class="breadcrumb">
             <li><a href="#">Home</a></li>
-            <li class="active">Products</li>
+            <li class="active">Ürünler</li>
         </ul>
     </div>
 </div>
@@ -181,7 +180,7 @@
 
                                             </i> Detay
                                         </button>
-                                        @foreach (var images in item.ImageFiles.ToList())
+                                        @foreach (var images in item.ImageFiles.Take(1))
                                         {
                                             <img src="@images.ImagePath" alt="">
                                         }
@@ -190,20 +189,25 @@
                                     <div class="product-body">
                                         <h3 class="product-price"> @item.UnitPrice TL </h3>
                                         <div class="product-rating">
-                                            @for (int i = 0; i < item.Star; i++)
-                                            {
+                                            @*@for (int i = 0; i < item.Star; i++)
+                                                {
 
-                                                <i class="fa fa-star"></i>
-                                            }
+                                                    <i class="fa fa-star"></i>
+                                                }*@
 
                                             <i class="fa fa-star-o empty"></i>
                                         </div>
                                         <h2 class="product-name"><a href="/Product/Details/@item.ProductId">@item.Name</a></h2>
-                                        <div class="product-btns">
-                                            <button class="main-btn icon-btn"><i class="fa fa-heart"></i></button>
-                                            <button class="main-btn icon-btn"><i class="fa fa-exchange"></i></button>
-                                            <button class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> Sepete Ekle </button>
-                                        </div>
+                                        @if (Session["loginCustomer"] != null)
+                                        {
+                                            <div class="product-btns">
+                                                <a href="/Fav/AddToFav/@item.ProductId" class="main-btn icon-btn"><i class="fa fa-heart"></i></a>
+                                                <button class="main-btn icon-btn"><i class="fa fa-exchange"></i></button>
+                                                <a href="/Basket/AddToBasket/@item.ProductId" class="primary-btn add-to-cart"><i class="fa fa-shopping-cart"></i> Sepete Ekle </a>
+                                            </div>
+
+                                        }
+
                                     </div>
                                 </div>
                             </div>
