--- a/eshopProject/eshop.Web/Views/Shared/_MenuNavPartial.cshtml
+++ b/eshopProject/eshop.Web/Views/Shared/_MenuNavPartial.cshtml
@@ -9,74 +9,54 @@
     <ul class="menu-list">
         <li><a href="#">Home</a></li>
         <li><a href="#">Shop</a></li>
-        <li class="dropdown mega-dropdown">
-            <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">Women <i class="fa fa-caret-down"></i></a>
-            <div class="custom-menu">
+        @foreach (var item in Model.Take(2))
+        {
+            <li class="dropdown mega-dropdown">
+                <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">@item.Name <i class="fa fa-caret-down"></i></a>
+                <div class="custom-menu">
 
 
-                <div class="row">
+                    <div class="row">
 
-                   
-                        <div class="col-md-4">
-                            <ul class="list-links">
-                                <li>
-                                    <h3 class="list-links-title">Categories</h3>
-                                </li>
-                                @foreach (var subItem in Model)
-                                {
-                                    <li><a href="#">@subItem.Name</a></li>
-                                }
-
-                            </ul>
-                            <hr class="hidden-md hidden-lg">
-                        </div>
-                        <div class="col-md-4">
-                            <ul class="list-links">
-                                <li>
-                                    <h3 class="list-links-title">Categories</h3>
-                                </li>
-                                @foreach (var subItem in Model)
-                                {
-                                    <li><a href="#">@subItem.Name</a></li>
-                                }
-
-                            </ul>
-                            <hr class="hidden-md hidden-lg">
-                        </div>
-                        <div class="col-md-4">
-                            <ul class="list-links">
-                                <li>
-                                    <h3 class="list-links-title">Categories</h3>
-                                </li>
-                                @foreach (var subItem in Model)
-                                {
-                                    <li><a href="#">@subItem.Name</a></li>
-                                }
-
-                            </ul>
-                            <hr class="hidden-md hidden-lg">
-                        </div>
-                    
+                       
+                            <div class="col-md-4">
+                                <ul class="list-links">
+                                    <li>
+                                        <h3 class="list-links-title">@item.Name</h3>
+                                    </li>
+                                    @foreach (var subCategory in item.SubCategories.ToList())
+                                    {
+                                        <li><a href="#">@subCategory.SubCategoryName</a></li>
+                                    }
 
 
-                </div>
 
-
-                <div class="row hidden-sm hidden-xs">
-                    <div class="col-md-12">
-                        <hr>
-                        <a class="banner banner-1" href="#">
-                            <img src="~/img/banner05.jpg" alt="">
-                            <div class="banner-caption text-center">
-                                <h2 class="white-color">NEW COLLECTION</h2>
-                                <h3 class="white-color font-weak">HOT DEAL</h3>
+                                </ul>
+                                <hr class="hidden-md hidden-lg">
                             </div>
-                        </a>
+                        
+
+
+                    </div>
+
+
+                    <div class="row hidden-sm hidden-xs">
+                        <div class="col-md-12">
+                            <hr>
+                            <a class="banner banner-1" href="#">
+                                <img src="~/img/banner05.jpg" alt="">
+                                <div class="banner-caption text-center">
+                                    <h2 class="white-color">NEW COLLECTION</h2>
+                                    <h3 class="white-color font-weak">HOT DEAL</h3>
+                                </div>
+                            </a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </li>
-        <li class="dropdown mega-dropdown full-width">
+            </li>
+        }
+
+        @*<li class="dropdown mega-dropdown full-width">
             <a class="dropdown-toggle" data-toggle="dropdown" aria-expanded="true">Men <i class="fa fa-caret-down"></i></a>
             <div class="custom-menu">
                 <div class="row">
@@ -163,9 +143,9 @@
                     </div>
                 </div>
             </div>
-        </li>
+        </li>*@
         <li><a href="#">Sales</a></li>
-        
+
     </ul>
 </div>
 
